main.output
Terminals unused in grammar

   _SELF_MINUS_UNARY_OP
   _COMMENT_LEFT
   _COMMENT_RIGHT


Grammar

    0 $accept: input $end

    1 input: code

    2 code: %empty
    3     | code block
    4     | code if_conditions
    5     | code while_conditions
    6     | code sentence _END_DIVIDED_CHAR

    7 if_conditions: _IF_CONDITION _LEFT_BRACKET exp _RIGHT_BRACKET block
    8              | _IF_CONDITION _LEFT_BRACKET exp _RIGHT_BRACKET block _ELSE_CONDITION block
    9              | _IF_CONDITION _LEFT_BRACKET exp _RIGHT_BRACKET block _ELSE_CONDITION if_conditions

   10 while_conditions: _WHILE_CONDITION _LEFT_BRACKET exp _RIGHT_BRACKET block

   11 block: _LEFT_BRACE code _RIGHT_BRACE

   12 sentence: declaration_series var_declaration
   13         | _VARIABLE_NAME assign_series exp

   14 exp: _VARIABLE_NAME
   15    | _INTEGER_VALUE
   16    | _FLOAT_VALUE
   17    | _CHAR_VALUE
   18    | _VARIABLE_NAME _SELF_PLUS_UNARY_OP
   19    | _VARIABLE_NAME _RIGHT_SELF_MINUS_UNARY_OP
   20    | _LEFT_SELF_PLUS_UNARY_OP _VARIABLE_NAME
   21    | _LEFT_SELF_MINUS_UNARY_OP _VARIABLE_NAME
   22    | exp _PLUS_OP exp
   23    | exp _MINUS_OP exp
   24    | exp _MULTIPLE_OP exp
   25    | exp _DIVIDE_OP exp
   26    | exp _MODULE_OP exp
   27    | exp _LARGER_OP exp
   28    | exp _LESS_OP exp
   29    | exp _LARGER_EQUAL_OP exp
   30    | exp _LESS_EQUAL_OP exp
   31    | exp _EQUAL_OP exp
   32    | exp _NOT_EQUAL_OP exp
   33    | exp _OR_OP exp
   34    | exp _AND_OP exp
   35    | _LEFT_BRACKET exp _COMMA_DIVIDED_CHAR exp _RIGHT_BRACKET
   36    | _LEFT_BRACKET exp _RIGHT_BRACKET
   37    | _MINUS_OP exp
   38    | _NOT_OP exp

   39 assign_series: _ASSIGN_UNARY_OP
   40              | _PLUS_ASSIGN_OP
   41              | _MINUS_ASSIGN_OP
   42              | _MULTI_ASSIGN_OP
   43              | _DIVIDE_ASSIGN_OP
   44              | _MODULE_ASSIGN_OP

   45 declaration_series: _INT_DECLARATION
   46                   | _CHAR_DECLARATION
   47                   | _FLOAT_RECLARATION

   48 var_declaration: _VARIABLE_NAME
   49                | _VARIABLE_NAME assign_series exp
   50                | var_declaration _COMMA_DIVIDED_CHAR var_declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
_VARIABLE_NAME (258) 13 14 18 19 20 21 48 49
_INTEGER_VALUE (259) 15
_FLOAT_VALUE (260) 16
_CHAR_VALUE (261) 17
_INT_DECLARATION (262) 45
_FLOAT_RECLARATION (263) 47
_CHAR_DECLARATION (264) 46
_IF_CONDITION (265) 7 8 9
_WHILE_CONDITION (266) 10
_ELSE_CONDITION (267) 8 9
_ASSIGN_UNARY_OP (268) 39
_PLUS_OP (269) 22
_MINUS_OP (270) 23 37
_MULTIPLE_OP (271) 24
_DIVIDE_OP (272) 25
_MODULE_OP (273) 26
_OR_OP (274) 33
_AND_OP (275) 34
_NOT_OP (276) 38
_PLUS_ASSIGN_OP (277) 40
_MINUS_ASSIGN_OP (278) 41
_MULTI_ASSIGN_OP (279) 42
_DIVIDE_ASSIGN_OP (280) 43
_MODULE_ASSIGN_OP (281) 44
_SELF_PLUS_UNARY_OP (282) 18
_SELF_MINUS_UNARY_OP (283)
_LARGER_OP (284) 27
_LESS_OP (285) 28
_LARGER_EQUAL_OP (286) 29
_LESS_EQUAL_OP (287) 30
_NOT_EQUAL_OP (288) 32
_EQUAL_OP (289) 31
_LEFT_BRACKET (290) 7 8 9 10 35 36
_RIGHT_BRACKET (291) 7 8 9 10 35 36
_LEFT_BRACE (292) 11
_RIGHT_BRACE (293) 11
_END_DIVIDED_CHAR (294) 6
_COMMA_DIVIDED_CHAR (295) 35 50
_COMMENT_LEFT (296)
_COMMENT_RIGHT (297)
_LEFT_SELF_PLUS_UNARY_OP (298) 20
_LEFT_SELF_MINUS_UNARY_OP (299) 21
_RIGHT_SELF_PLUS_UNARY_OP (300)
_RIGHT_SELF_MINUS_UNARY_OP (301) 19
_UMINUS_OP (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
input (49)
    on left: 1, on right: 0
code (50)
    on left: 2 3 4 5 6, on right: 1 3 4 5 6 11
if_conditions (51)
    on left: 7 8 9, on right: 4 9
while_conditions (52)
    on left: 10, on right: 5
block (53)
    on left: 11, on right: 3 7 8 9 10
sentence (54)
    on left: 12 13, on right: 6
exp (55)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32 33 34 35 36 37 38, on right: 7 8 9 10 13 22 23 24 25 26 27 28
    29 30 31 32 33 34 35 36 37 38 49
assign_series (56)
    on left: 39 40 41 42 43 44, on right: 13 49
declaration_series (57)
    on left: 45 46 47, on right: 12
var_declaration (58)
    on left: 48 49 50, on right: 12 50


State 0

    0 $accept: . input $end

    $default  reduce using rule 2 (code)

    input  go to state 1
    code   go to state 2


State 1

    0 $accept: input . $end

    $end  shift, and go to state 3


State 2

    1 input: code .
    3 code: code . block
    4     | code . if_conditions
    5     | code . while_conditions
    6     | code . sentence _END_DIVIDED_CHAR

    _VARIABLE_NAME      shift, and go to state 4
    _INT_DECLARATION    shift, and go to state 5
    _FLOAT_RECLARATION  shift, and go to state 6
    _CHAR_DECLARATION   shift, and go to state 7
    _IF_CONDITION       shift, and go to state 8
    _WHILE_CONDITION    shift, and go to state 9
    _LEFT_BRACE         shift, and go to state 10

    $default  reduce using rule 1 (input)

    if_conditions       go to state 11
    while_conditions    go to state 12
    block               go to state 13
    sentence            go to state 14
    declaration_series  go to state 15


State 3

    0 $accept: input $end .

    $default  accept


State 4

   13 sentence: _VARIABLE_NAME . assign_series exp

    _ASSIGN_UNARY_OP   shift, and go to state 16
    _PLUS_ASSIGN_OP    shift, and go to state 17
    _MINUS_ASSIGN_OP   shift, and go to state 18
    _MULTI_ASSIGN_OP   shift, and go to state 19
    _DIVIDE_ASSIGN_OP  shift, and go to state 20
    _MODULE_ASSIGN_OP  shift, and go to state 21

    assign_series  go to state 22


State 5

   45 declaration_series: _INT_DECLARATION .

    $default  reduce using rule 45 (declaration_series)


State 6

   47 declaration_series: _FLOAT_RECLARATION .

    $default  reduce using rule 47 (declaration_series)


State 7

   46 declaration_series: _CHAR_DECLARATION .

    $default  reduce using rule 46 (declaration_series)


State 8

    7 if_conditions: _IF_CONDITION . _LEFT_BRACKET exp _RIGHT_BRACKET block
    8              | _IF_CONDITION . _LEFT_BRACKET exp _RIGHT_BRACKET block _ELSE_CONDITION block
    9              | _IF_CONDITION . _LEFT_BRACKET exp _RIGHT_BRACKET block _ELSE_CONDITION if_conditions

    _LEFT_BRACKET  shift, and go to state 23


State 9

   10 while_conditions: _WHILE_CONDITION . _LEFT_BRACKET exp _RIGHT_BRACKET block

    _LEFT_BRACKET  shift, and go to state 24


State 10

   11 block: _LEFT_BRACE . code _RIGHT_BRACE

    $default  reduce using rule 2 (code)

    code  go to state 25


State 11

    4 code: code if_conditions .

    $default  reduce using rule 4 (code)


State 12

    5 code: code while_conditions .

    $default  reduce using rule 5 (code)


State 13

    3 code: code block .

    $default  reduce using rule 3 (code)


State 14

    6 code: code sentence . _END_DIVIDED_CHAR

    _END_DIVIDED_CHAR  shift, and go to state 26


State 15

   12 sentence: declaration_series . var_declaration

    _VARIABLE_NAME  shift, and go to state 27

    var_declaration  go to state 28


State 16

   39 assign_series: _ASSIGN_UNARY_OP .

    $default  reduce using rule 39 (assign_series)


State 17

   40 assign_series: _PLUS_ASSIGN_OP .

    $default  reduce using rule 40 (assign_series)


State 18

   41 assign_series: _MINUS_ASSIGN_OP .

    $default  reduce using rule 41 (assign_series)


State 19

   42 assign_series: _MULTI_ASSIGN_OP .

    $default  reduce using rule 42 (assign_series)


State 20

   43 assign_series: _DIVIDE_ASSIGN_OP .

    $default  reduce using rule 43 (assign_series)


State 21

   44 assign_series: _MODULE_ASSIGN_OP .

    $default  reduce using rule 44 (assign_series)


State 22

   13 sentence: _VARIABLE_NAME assign_series . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 38


State 23

    7 if_conditions: _IF_CONDITION _LEFT_BRACKET . exp _RIGHT_BRACKET block
    8              | _IF_CONDITION _LEFT_BRACKET . exp _RIGHT_BRACKET block _ELSE_CONDITION block
    9              | _IF_CONDITION _LEFT_BRACKET . exp _RIGHT_BRACKET block _ELSE_CONDITION if_conditions

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 39


State 24

   10 while_conditions: _WHILE_CONDITION _LEFT_BRACKET . exp _RIGHT_BRACKET block

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 40


State 25

    3 code: code . block
    4     | code . if_conditions
    5     | code . while_conditions
    6     | code . sentence _END_DIVIDED_CHAR
   11 block: _LEFT_BRACE code . _RIGHT_BRACE

    _VARIABLE_NAME      shift, and go to state 4
    _INT_DECLARATION    shift, and go to state 5
    _FLOAT_RECLARATION  shift, and go to state 6
    _CHAR_DECLARATION   shift, and go to state 7
    _IF_CONDITION       shift, and go to state 8
    _WHILE_CONDITION    shift, and go to state 9
    _LEFT_BRACE         shift, and go to state 10
    _RIGHT_BRACE        shift, and go to state 41

    if_conditions       go to state 11
    while_conditions    go to state 12
    block               go to state 13
    sentence            go to state 14
    declaration_series  go to state 15


State 26

    6 code: code sentence _END_DIVIDED_CHAR .

    $default  reduce using rule 6 (code)


State 27

   48 var_declaration: _VARIABLE_NAME .
   49                | _VARIABLE_NAME . assign_series exp

    _ASSIGN_UNARY_OP   shift, and go to state 16
    _PLUS_ASSIGN_OP    shift, and go to state 17
    _MINUS_ASSIGN_OP   shift, and go to state 18
    _MULTI_ASSIGN_OP   shift, and go to state 19
    _DIVIDE_ASSIGN_OP  shift, and go to state 20
    _MODULE_ASSIGN_OP  shift, and go to state 21

    $default  reduce using rule 48 (var_declaration)

    assign_series  go to state 42


State 28

   12 sentence: declaration_series var_declaration .
   50 var_declaration: var_declaration . _COMMA_DIVIDED_CHAR var_declaration

    _COMMA_DIVIDED_CHAR  shift, and go to state 43

    $default  reduce using rule 12 (sentence)


State 29

   14 exp: _VARIABLE_NAME .
   18    | _VARIABLE_NAME . _SELF_PLUS_UNARY_OP
   19    | _VARIABLE_NAME . _RIGHT_SELF_MINUS_UNARY_OP

    _SELF_PLUS_UNARY_OP         shift, and go to state 44
    _RIGHT_SELF_MINUS_UNARY_OP  shift, and go to state 45

    $default  reduce using rule 14 (exp)


State 30

   15 exp: _INTEGER_VALUE .

    $default  reduce using rule 15 (exp)


State 31

   16 exp: _FLOAT_VALUE .

    $default  reduce using rule 16 (exp)


State 32

   17 exp: _CHAR_VALUE .

    $default  reduce using rule 17 (exp)


State 33

   37 exp: _MINUS_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 46


State 34

   38 exp: _NOT_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 47


State 35

   35 exp: _LEFT_BRACKET . exp _COMMA_DIVIDED_CHAR exp _RIGHT_BRACKET
   36    | _LEFT_BRACKET . exp _RIGHT_BRACKET

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 48


State 36

   20 exp: _LEFT_SELF_PLUS_UNARY_OP . _VARIABLE_NAME

    _VARIABLE_NAME  shift, and go to state 49


State 37

   21 exp: _LEFT_SELF_MINUS_UNARY_OP . _VARIABLE_NAME

    _VARIABLE_NAME  shift, and go to state 50


State 38

   13 sentence: _VARIABLE_NAME assign_series exp .
   22 exp: exp . _PLUS_OP exp
   23    | exp . _MINUS_OP exp
   24    | exp . _MULTIPLE_OP exp
   25    | exp . _DIVIDE_OP exp
   26    | exp . _MODULE_OP exp
   27    | exp . _LARGER_OP exp
   28    | exp . _LESS_OP exp
   29    | exp . _LARGER_EQUAL_OP exp
   30    | exp . _LESS_EQUAL_OP exp
   31    | exp . _EQUAL_OP exp
   32    | exp . _NOT_EQUAL_OP exp
   33    | exp . _OR_OP exp
   34    | exp . _AND_OP exp

    _PLUS_OP          shift, and go to state 51
    _MINUS_OP         shift, and go to state 52
    _MULTIPLE_OP      shift, and go to state 53
    _DIVIDE_OP        shift, and go to state 54
    _MODULE_OP        shift, and go to state 55
    _OR_OP            shift, and go to state 56
    _AND_OP           shift, and go to state 57
    _LARGER_OP        shift, and go to state 58
    _LESS_OP          shift, and go to state 59
    _LARGER_EQUAL_OP  shift, and go to state 60
    _LESS_EQUAL_OP    shift, and go to state 61
    _NOT_EQUAL_OP     shift, and go to state 62
    _EQUAL_OP         shift, and go to state 63

    $default  reduce using rule 13 (sentence)


State 39

    7 if_conditions: _IF_CONDITION _LEFT_BRACKET exp . _RIGHT_BRACKET block
    8              | _IF_CONDITION _LEFT_BRACKET exp . _RIGHT_BRACKET block _ELSE_CONDITION block
    9              | _IF_CONDITION _LEFT_BRACKET exp . _RIGHT_BRACKET block _ELSE_CONDITION if_conditions
   22 exp: exp . _PLUS_OP exp
   23    | exp . _MINUS_OP exp
   24    | exp . _MULTIPLE_OP exp
   25    | exp . _DIVIDE_OP exp
   26    | exp . _MODULE_OP exp
   27    | exp . _LARGER_OP exp
   28    | exp . _LESS_OP exp
   29    | exp . _LARGER_EQUAL_OP exp
   30    | exp . _LESS_EQUAL_OP exp
   31    | exp . _EQUAL_OP exp
   32    | exp . _NOT_EQUAL_OP exp
   33    | exp . _OR_OP exp
   34    | exp . _AND_OP exp

    _PLUS_OP          shift, and go to state 51
    _MINUS_OP         shift, and go to state 52
    _MULTIPLE_OP      shift, and go to state 53
    _DIVIDE_OP        shift, and go to state 54
    _MODULE_OP        shift, and go to state 55
    _OR_OP            shift, and go to state 56
    _AND_OP           shift, and go to state 57
    _LARGER_OP        shift, and go to state 58
    _LESS_OP          shift, and go to state 59
    _LARGER_EQUAL_OP  shift, and go to state 60
    _LESS_EQUAL_OP    shift, and go to state 61
    _NOT_EQUAL_OP     shift, and go to state 62
    _EQUAL_OP         shift, and go to state 63
    _RIGHT_BRACKET    shift, and go to state 64


State 40

   10 while_conditions: _WHILE_CONDITION _LEFT_BRACKET exp . _RIGHT_BRACKET block
   22 exp: exp . _PLUS_OP exp
   23    | exp . _MINUS_OP exp
   24    | exp . _MULTIPLE_OP exp
   25    | exp . _DIVIDE_OP exp
   26    | exp . _MODULE_OP exp
   27    | exp . _LARGER_OP exp
   28    | exp . _LESS_OP exp
   29    | exp . _LARGER_EQUAL_OP exp
   30    | exp . _LESS_EQUAL_OP exp
   31    | exp . _EQUAL_OP exp
   32    | exp . _NOT_EQUAL_OP exp
   33    | exp . _OR_OP exp
   34    | exp . _AND_OP exp

    _PLUS_OP          shift, and go to state 51
    _MINUS_OP         shift, and go to state 52
    _MULTIPLE_OP      shift, and go to state 53
    _DIVIDE_OP        shift, and go to state 54
    _MODULE_OP        shift, and go to state 55
    _OR_OP            shift, and go to state 56
    _AND_OP           shift, and go to state 57
    _LARGER_OP        shift, and go to state 58
    _LESS_OP          shift, and go to state 59
    _LARGER_EQUAL_OP  shift, and go to state 60
    _LESS_EQUAL_OP    shift, and go to state 61
    _NOT_EQUAL_OP     shift, and go to state 62
    _EQUAL_OP         shift, and go to state 63
    _RIGHT_BRACKET    shift, and go to state 65


State 41

   11 block: _LEFT_BRACE code _RIGHT_BRACE .

    $default  reduce using rule 11 (block)


State 42

   49 var_declaration: _VARIABLE_NAME assign_series . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 66


State 43

   50 var_declaration: var_declaration _COMMA_DIVIDED_CHAR . var_declaration

    _VARIABLE_NAME  shift, and go to state 27

    var_declaration  go to state 67


State 44

   18 exp: _VARIABLE_NAME _SELF_PLUS_UNARY_OP .

    $default  reduce using rule 18 (exp)


State 45

   19 exp: _VARIABLE_NAME _RIGHT_SELF_MINUS_UNARY_OP .

    $default  reduce using rule 19 (exp)


State 46

   22 exp: exp . _PLUS_OP exp
   23    | exp . _MINUS_OP exp
   24    | exp . _MULTIPLE_OP exp
   25    | exp . _DIVIDE_OP exp
   26    | exp . _MODULE_OP exp
   27    | exp . _LARGER_OP exp
   28    | exp . _LESS_OP exp
   29    | exp . _LARGER_EQUAL_OP exp
   30    | exp . _LESS_EQUAL_OP exp
   31    | exp . _EQUAL_OP exp
   32    | exp . _NOT_EQUAL_OP exp
   33    | exp . _OR_OP exp
   34    | exp . _AND_OP exp
   37    | _MINUS_OP exp .

    $default  reduce using rule 37 (exp)


State 47

   22 exp: exp . _PLUS_OP exp
   23    | exp . _MINUS_OP exp
   24    | exp . _MULTIPLE_OP exp
   25    | exp . _DIVIDE_OP exp
   26    | exp . _MODULE_OP exp
   27    | exp . _LARGER_OP exp
   28    | exp . _LESS_OP exp
   29    | exp . _LARGER_EQUAL_OP exp
   30    | exp . _LESS_EQUAL_OP exp
   31    | exp . _EQUAL_OP exp
   32    | exp . _NOT_EQUAL_OP exp
   33    | exp . _OR_OP exp
   34    | exp . _AND_OP exp
   38    | _NOT_OP exp .

    $default  reduce using rule 38 (exp)


State 48

   22 exp: exp . _PLUS_OP exp
   23    | exp . _MINUS_OP exp
   24    | exp . _MULTIPLE_OP exp
   25    | exp . _DIVIDE_OP exp
   26    | exp . _MODULE_OP exp
   27    | exp . _LARGER_OP exp
   28    | exp . _LESS_OP exp
   29    | exp . _LARGER_EQUAL_OP exp
   30    | exp . _LESS_EQUAL_OP exp
   31    | exp . _EQUAL_OP exp
   32    | exp . _NOT_EQUAL_OP exp
   33    | exp . _OR_OP exp
   34    | exp . _AND_OP exp
   35    | _LEFT_BRACKET exp . _COMMA_DIVIDED_CHAR exp _RIGHT_BRACKET
   36    | _LEFT_BRACKET exp . _RIGHT_BRACKET

    _PLUS_OP             shift, and go to state 51
    _MINUS_OP            shift, and go to state 52
    _MULTIPLE_OP         shift, and go to state 53
    _DIVIDE_OP           shift, and go to state 54
    _MODULE_OP           shift, and go to state 55
    _OR_OP               shift, and go to state 56
    _AND_OP              shift, and go to state 57
    _LARGER_OP           shift, and go to state 58
    _LESS_OP             shift, and go to state 59
    _LARGER_EQUAL_OP     shift, and go to state 60
    _LESS_EQUAL_OP       shift, and go to state 61
    _NOT_EQUAL_OP        shift, and go to state 62
    _EQUAL_OP            shift, and go to state 63
    _RIGHT_BRACKET       shift, and go to state 68
    _COMMA_DIVIDED_CHAR  shift, and go to state 69


State 49

   20 exp: _LEFT_SELF_PLUS_UNARY_OP _VARIABLE_NAME .

    $default  reduce using rule 20 (exp)


State 50

   21 exp: _LEFT_SELF_MINUS_UNARY_OP _VARIABLE_NAME .

    $default  reduce using rule 21 (exp)


State 51

   22 exp: exp _PLUS_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 70


State 52

   23 exp: exp _MINUS_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 71


State 53

   24 exp: exp _MULTIPLE_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 72


State 54

   25 exp: exp _DIVIDE_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 73


State 55

   26 exp: exp _MODULE_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 74


State 56

   33 exp: exp _OR_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 75


State 57

   34 exp: exp _AND_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 76


State 58

   27 exp: exp _LARGER_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 77


State 59

   28 exp: exp _LESS_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 78


State 60

   29 exp: exp _LARGER_EQUAL_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 79


State 61

   30 exp: exp _LESS_EQUAL_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 80


State 62

   32 exp: exp _NOT_EQUAL_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 81


State 63

   31 exp: exp _EQUAL_OP . exp

    _VARIABLE_NAME             shift, and go to state 29
    _INTEGER_VALUE             shift, and go to state 30
    _FLOAT_VALUE               shift, and go to state 31
    _CHAR_VALUE                shift, and go to state 32
    _MINUS_OP                  shift, and go to state 33
    _NOT_OP                    shift, and go to state 34
    _LEFT_BRACKET              shift, and go to state 35
    _LEFT_SELF_PLUS_UNARY_OP   shift, and go to state 36
    _LEFT_SELF_MINUS_UNARY_OP  shift, and go to state 37

    exp  go to state 82


State 64
